--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap');
+
+
 .navbar {
+    font-family: 'Inter', sans-serif;
     background-color: #7749F8;
     padding: 10px;
     font-size: 20px;
