--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Karla:wght@200;400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;600&family=Inter:wght@400;700;800&display=swap');
 
 * {
   box-sizing: border-box;
