--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,11 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap");
 
 .navbar {
-    font-family: 'Inter', sans-serif;
-    background-color: #7749F8;
-    padding: 10px;
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
+  font-family: "Inter", sans-serif;
+  background-color: #7749f8;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: lighter;
+  text-align: center;
+}
+
+.navbar-brand {
+  font-weight: bold;
+}
+
+
+
+button {
+  background-color: #08e459;
+  color: #fff;
+  border-radius: 4px;
+  border: none;
+  display: flex;
+}
+
+a {
+  font-family: "Inter", sans-serif;
+  padding: 10px;
+  font-size: 14px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+}
+
+.navbar a:hover {
+  color: #7749f8;
 }
